localization/v2.5.x/site/zh/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: 本页为您提供与 Milvus 和第三方工具互动的教程列表。
title: 集成概述
---

<h1 id="Integrations-Overview" class="common-anchor-header">集成概述<button data-href="#Integrations-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>本页为您提供与 Milvus 和第三方工具互动的教程列表。</p>
<table>
<thead>
<tr><th>教程</th><th>使用案例</th><th>合作伙伴或堆栈</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_llamaindex.md">使用 Milvus 和 LlamaIndex 的 RAG</a></td><td>RAG</td><td>Milvus 和 LLamaIndex</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_langchain.md">使用 Milvus 和 LangChain 的 RAG</a></td><td>RAG</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/milvus_hybrid_search_retriever.md">Milvus 混合搜索检索器在 LangChain 中的应用</a></td><td>混合搜索</td><td>Milvus、LangChain</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/basic_usage_langchain.md">在LangChain中使用Milvus作为向量库</a></td><td>语义搜索</td><td>Milvus、LangChain</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/full_text_search_with_langchain.md">使用 LangChain 和 Milvus 进行全文检索</a></td><td>全文搜索</td><td>Milvus、LangChain</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_haystack.md">使用 Milvus 和 HayStack 进行 RAG 搜索</a></td><td>RAG</td><td>Milvus、HayStack</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/llamaindex_milvus_async.md">使用 Milvus 和 LlamaIndex 异步 API 的 RAG</a></td><td>协调</td><td>Milvus、LlamaIndex</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/milvus_rag_with_vllm.md">使用 Milvus、vLLM 和 Llama 3.1 构建 RAG</a></td><td>RAG</td><td>Milvus、vLLM、LlamaIndex</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/llamaindex_milvus_full_text_search.md">使用 LlamaIndex 和 Milvus 进行全文搜索</a></td><td>全文搜索</td><td>Milvus、LlamaIndex</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/dify_with_milvus.md">使用 Milvus 部署 Dify</a></td><td>协调</td><td>Milvus、Dify</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/rag_with_langflow.md">使用 Milvus 和 Langflow 构建 RAG 系统</a></td><td>协调</td><td>Milvus, Langflow</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/use_milvus_in_private_gpt.md">在 PrivateGPT 中使用 Milvus</a></td><td>协调</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/use_milvus_in_docsgpt.md">在 DocsGPT 中使用 Milvus</a></td><td>协调</td><td>DocsGPT、Milvus</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/use_milvus_with_sambanova.md">在 SambaNova 中使用 Milvus</a></td><td>协调</td><td>Milvus, SambaNova</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/milvus_rag_with_dynamiq.md">开始使用 Dynamiq 和 Milvus</a></td><td>协调</td><td>Milvus、Dynamiq</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/llama_stack_with_milvus.md">使用 Milvus 与 Llama Stack 构建 RAG</a></td><td>协调</td><td>Milvus、Llama Stack</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_memgpt.md">使用 Milvus 和 MemGPT 的聊天机器人 Agents</a></td><td>Agents</td><td>Milvus、MemGPT</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/llama_agents_metadata.md">使用 Mistral AI、Milvus 和 Llama-agents 的多代理系统</a></td><td>Agents</td><td>Milvus、Mistral AI、LlamaIndex</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/quickstart_mem0_with_milvus.md">Mem0 和 Milvus 入门</a></td><td>Agents</td><td>Mem0、Milvus</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_agno.md">Milvus 与 Agno 集成</a></td><td>Agents</td><td>Milvus、Agno</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/milvus_and_mcp.md">MCP + Milvus：连接人工智能与向量数据库</a></td><td>Agents</td><td>Milvus、MCP</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/openai_agents_milvus.md">Milvus 与 OpenAI Agents 的集成：分步指南</a></td><td>Agents</td><td>Milvus、OpenAI</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_ragas.md">使用 Ragas 和 Milvus 进行 RAG 评估</a></td><td>评估</td><td>Milvus、Ragas</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/evaluation_with_deepeval.md">使用 DeepEval 进行评估</a></td><td>评估与可观察性</td><td>Milvus、DeepEval</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/evaluation_with_phoenix.md">使用 Arize Pheonix 进行评估</a></td><td>评估与可观察性</td><td>Milvus、Arize Pheonix</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_langfuse.md">Langfuse 中的 Milvus</a></td><td>可观察性</td><td>Milvus、Langfuse</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_openai.md">使用 Milvus 和 OpenAI 进行语义搜索</a></td><td>语义搜索</td><td>Milvus、OpenAI</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_cohere.md">使用 Milvus 和 Cohere 进行问题解答</a></td><td>语义搜索</td><td>Milvus、Cohere</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_hugging-face.md">使用 Milvus 和 HuggingFace 进行问题解答</a></td><td>问题解答</td><td>Milvus、HuggingFace</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_pytorch.md">使用 Milvus 和 Pytorch 进行图像搜索</a></td><td>语义搜索</td><td>Milvus、Pytorch</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_sentencetransformers.md">使用 Milvus 和 SentenceTransfromers 进行电影搜索</a></td><td>语义搜索</td><td>Milvus、SentenceTransformers</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_voxel51.md">使用 Milvus 和 FiftyOne 进行视觉搜索</a></td><td>语义搜索</td><td>Milvus、FiftyOne</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_voyageai.md">利用 Milvus 和 VoyageAI 进行语义搜索</a></td><td>语义搜索</td><td>Milvus、VoyageAI</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_bentoml.md">使用 Milvus 和 BentoML 的 RAG</a></td><td>RAG</td><td>Milvus、BentoML</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_dspy.md">使用 Milvus 和 DSPy 的 RAG</a></td><td>RAG</td><td>Milvus、DSPy</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_jina.md">使用 Milvus 和 Jina 进行语义搜索</a></td><td>语义搜索</td><td>Milvus、Jina</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_snowpark.md">Milvus on Snowpark 容器服务</a></td><td>数据连接</td><td>Milvus、Snowpark</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_whyhow.md">使用 Milvus 和 WhyHow 进行基于规则的检索</a></td><td>问题解答</td><td>Milvus、WhyHow</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_fastgpt.md">如何使用 Milvus 部署 FastGPT</a></td><td>RAG</td><td>Milvus、FastGPT</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_vanna.md">使用 Vanna 和 Milvus 编写 SQL</a></td><td>RAG</td><td>Milvus、Vanna</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_camel.md">使用 Milvus 和 Camel 编写 RAG</a></td><td>RAG</td><td>Milvus、Camel</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integrate_with_airbyte.md">Airbyte 和 Milvus：开源数据移动基础设施</a></td><td>数据连接</td><td>Milvus、Airbyte</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/video_search_with_twelvelabs_and_milvus.md">高级视频搜索：利用 Twelve Labs 和 Milvus 进行语义检索</a></td><td>语义搜索</td><td>Milvus、Twelve Labs</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/kafka-connect-milvus.md">用 Milvus 连接 Kafka</a></td><td>数据源</td><td>Milvus、Kafka</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/kotaemon_with_milvus.md">用 Milvus 连接 Kotaemon RAG</a></td><td>RAG</td><td>Milvus、Kotaemon</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/apify_milvus_rag.md">检索增强生成：使用 Apify 抓取网站并将数据保存到 Milvus 以用于问题解答</a></td><td>数据源</td><td>Milvus、Apify</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/build_rag_on_arm.md">在 Arm 架构上构建 RAG</a></td><td>RAG</td><td>Milvus、Arm</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/build_RAG_with_milvus_and_fireworks.md">使用 Milvus 和 Fireworks AI 构建 RAG</a></td><td>LLMs</td><td>Milvus、Fireworks AI</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/build_RAG_with_milvus_and_lepton.md">使用 Milvus 和 Lepton AI 构建 RAG</a></td><td>LLMs</td><td>Milvus、Lepton AI</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/build_RAG_with_milvus_and_siliconflow.md">使用 Milvus 和 SiliconFlow 构建 RAG</a></td><td>LLMs</td><td>Milvus、SiliconFlow</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/rag_with_milvus_and_unstructured.md">使用 Milvus 和非结构化数据源构建 RAG</a></td><td>数据源</td><td>Milvus、非结构化</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/RAG_with_pii_and_milvus.md">使用 Milvus + PII 屏蔽器构建 RAG</a></td><td>数据源</td><td>Milvus，PII 屏蔽器</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/knowledge_table_with_milvus.md">使用 Milvus 的知识表</a></td><td>知识工程</td><td>知识表，Milvus</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/build_RAG_with_milvus_and_cognee.md">使用 Milvus 和 Cognee 建立 RAG</a></td><td>知识工程</td><td>Milvus、Cognee</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/build_RAG_with_milvus_and_gemini.md">使用 Milvus 和 Gemini 构建 RAG</a></td><td>LLMs</td><td>Milvus、Gemini</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/build_RAG_with_milvus_and_ollama.md">使用 Milvus 和 Ollama 构建 RAG</a></td><td>LLMs</td><td>Milvus、Ollama</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/build_RAG_with_milvus_and_deepseek.md">使用 Milvus 和 DeepSeek 构建 RAG</a></td><td>LLMs</td><td>Milvus、DeepSeek</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/build_RAG_with_milvus_and_crawl4ai.md">利用 Milvus 和 Crawl4AI 构建 RAG</a></td><td>数据源</td><td>Milvus、Crawl4AI</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/build_RAG_with_milvus_and_firecrawl.md">利用 Milvus 和 Firecrawl 构建 RAG</a></td><td>数据源</td><td>Milvus、Firecrawl</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/integration_with_mindsdb.md">Milvus 与 MindsDB 集成</a></td><td>知识工程</td><td>Milvus、MindsDB</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/build_RAG_with_milvus_and_feast.md">用 Milvus 和 Feast 构建 RAG</a></td><td>数据源</td><td>Milvus、Feast</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/build_RAG_with_milvus_and_docling.md">使用 Milvus 和 Docling 构建 RAG</a></td><td>数据源</td><td>Milvus、Docling</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/build_RAG_with_milvus_and_embedAnything.md">使用 Milvus 和 EmbedAnything 构建 RAG</a></td><td>嵌入</td><td>Milvus、EmbedAnything</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/milvus_and_n8n.md">开始使用 Milvus 和 n8n</a></td><td>编排</td><td>Milvus, n8n</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/use_milvus_in_anythingllm.md">在 AnythingLLM 中使用 Milvus</a></td><td>编排</td><td>Milvus、AnythingLLM</td></tr>
<tr><td><a href="/docs/zh/v2.5.x/NLWeb_with_milvus.md">在 Milvus 中使用 NLWeb</a></td><td>数据源</td><td>Milvus、NLWeb</td></tr>
</tbody>
</table>
